fix(parity): subdir-as-title, season filepart with sep padding
filepart3EpisodeTitle skips when filename already has a title — avoids
overwriting filename-sourced title with a generic subdir name like
"/series/" (case 2114). Mirrors the python preference order.

serieNameFilepart now accepts a season match that spans the filepart
modulo separator padding (" Season 02" → seasonHead [13,22] in path
[12,22]), matching python's `parent.span` tolerance. Without this,
the leading-space dir didn't qualify as season-only and the filename
became the title source.

YML parity 1442→1446 (86.0%→86.2%); +32 cumulative since baseline.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>